# react-native-localize

skia/: BUILD.gn  RNLocalizeModule.cpp  RNLocalizeModule.h  Rsk.project
